# Midi

./: .gitignore  Foo2.mid  Foo3.hs  Midi.cabal  Music.hs  README.md  TODO  TimeSet.hs  debugging.txt  foooo.mid  hugsin  mel.mid  midi.hs  midi_.hs  test.hs  test.mid  test2.hs  test2.mid
examples/: test2.mid  test3.mid  test4.mid  test5.mid
src/: Abstract.hs  Midi.hs  Music.hs  Out.ps  TimeSet.hs  Util.hs
src/Midi/: Abstract.hs  TimeSet.hs  Util.hs
test/: test.hs  test2.hs  test3.hs  test4.hs  test5.hs  test6.hs
