Name:          Midi
Version:       0.3
Synopsis:      Generate MIDI files from Haskell.
Homepage:      https://github.com/sordina/Midi
License:       BSD3
License-file:  LICENSE
Author:        Lyndon Maydwell
Maintainer:    maydwell@gmail.com
Category:      Sound
Build-type:    Simple
Cabal-version: >=1.2


Library
  hs-source-dirs: src

  Exposed-modules:
      Music,
      Midi,
        Midi.Abstract,
        Midi.TimeSet
        Midi.Util

  Build-depends: base, bytestring, containers
